--- a/.github/workflows/build_push_aws.yml
+++ b/.github/workflows/build_push_aws.yml
@@ -91,6 +91,8 @@ jobs:
 
     
     - name: Describe ECS Services (Debugging)
+      env:
+        ECS_SERVICE: test_nbbo
       run: aws ecs describe-services --cluster $ECS_CLUSTER --services $ECS_SERVICE
 
     - name: Check if ECS Task Definition Exists
