added aws ecs support

--- a/.github/workflows/build_push_aws.yml
+++ b/.github/workflows/build_push_aws.yml
@@ -20,11 +20,12 @@ jobs:
       AWS_REGION: ${{ secrets.AWS_REGION }}
       ECS_CLUSTER: ultima_ecs
       IMAGE_TAG: latest
+      TASK_FAMILY: nbbo
 
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
-
+  #testing purpose of the env variables
     - name: Test AWS CLI Authentication
       run: aws ecs list-clusters
       env:
@@ -67,7 +68,6 @@ jobs:
     - name: Build, tag, and push image to Amazon ECR
       env:
         ECR_REGISTRY: ${{steps.login-ecr.outputs.registry}}
-        
       run: |
         docker buildx build \
           --build-arg OPENAI_API_KEY=${{secrets.OPENAI_API_KEY}} \
@@ -79,9 +79,7 @@ jobs:
           --cache-from=type=local,src=/tmp/.buildx-cache \
           --cache-to=type=local,dest=/tmp/.buildx-cache-new \
           --push \
-          .
-        
-
+          .  
     # Updating cache
     - name: Update cache
       uses: actions/cache@v2
@@ -89,131 +87,61 @@ jobs:
         path: /tmp/.buildx-cache-new
         key: ${{ runner.os }}-buildx-${{ github.sha }}
 
-    
-    - name: Describe ECS Services (Debugging)
-      env:
-        ECS_SERVICE: test_nbbo
-      run: aws ecs describe-services --cluster $ECS_CLUSTER --services $ECS_SERVICE
+    # Outputs
+    outputs:
+      ecr_uri: ${{ steps.login-ecr.outputs.registry }}/${{ env.REPO_NAME }} 
 
-    - name: Check if ECS Task Definition Exists
-      id: check_task_definition
-      env:
-        TASK_DEFINITION_TAG: nbbo
+
+  deploy:
+    needs: build-and-push  # This job runs after build-and-push job
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        task_family: ['nbbo'] # List of task families
+
+    env:
+      REPO_NAME: ${{ github.event.repository.name }}
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      ECS_CLUSTER: ultima_ecs
+      IMAGE_TAG: latest
+      TASK_FAMILY: ${{ matrix.task_family }}
+      ECR_URI: ${{ needs.build-and-push.outputs.ecr_uri }} #is without:latest because is setted in the cloud formation file (check)
+
+    steps:
+      # ... [steps specific to deployment]
+    - name: Deploy CloudFormation Stack
       run: |
-        TASK_DEF_EXISTS=$(aws ecs describe-task-definition --task-definition $TASK_DEFINITION_TAG | jq ".taskDefinition.taskDefinitionArn" || echo "")
-        if [ -z "$TASK_DEF_EXISTS" ]; then
-          echo "TASK_DEFINITION_DOES_NOT_EXIST=true" >> $GITHUB_ENV
-        else
-          echo "TASK_DEFINITION_DOES_NOT_EXIST=false" >> $GITHUB_ENV
-        fi
+        aws cloudformation deploy \
+          --template-file /cloudformation/ecs_cloudformation.yaml \
+          --stack-name test_${{env.TASK_FAMILY}} \
+          --parameter-overrides \
+          ECRRepositoryURI=${{ env.ECR_URI }} \
+          ECSExecutionRole=arn:aws:iam::${{secrets.AWS_ACCOUNT_ID}}:role/ecsTaskExecutionRole \
+          ECSTaskRole=arn:aws:iam::${{secrets.AWS_ACCOUNT_ID}}:role/ecsTaskRole \
+          ECSTaskFamily=${{env.TASK_FAMILY}} \
+          ECSCluster=${{env.ECS_CLUSTER}}
 
-    - name: Create ECS Task Definition if Not Exists
-      env:
-        ECR_REGISTRY: ${{steps.login-ecr.outputs.registry}}
-        TASK_DEFINITION_TAG: nbbo
-      if: env.TASK_DEFINITION_DOES_NOT_EXIST == 'true'
+    - name: Ensure CloudWatch Log Group and Stream Exist
       run: |
-        aws ecs register-task-definition \
-        --family ${{env.TASK_DEFINITION_TAG}} \
-        --network-mode awsvpc \
-        --container-definitions '[
-          {
-            "name": "mycontainer",
-            "image": "${{env.ECR_REGISTRY}}/${{env.REPO_NAME}}:${{env.IMAGE_TAG}}",
-            "cpu": 300,
-            "memory": 300,
-            "memoryReservation": 300,
-            "essential": true,
-            "command": ["python", "-m", "${{env.TASK_DEFINITION_TAG}}"],
-            "workingDirectory": "/code/feed/",
-            "mountPoints": [
-              {
-                "sourceVolume": "configVolume",
-                "containerPath": "/config_cf.yaml",
-                "readOnly": false
-              }
-            ],
-            "logConfiguration": {
-              "logDriver": "awslogs",
-              "options": {
-                "awslogs-create-group": "true",
-                "awslogs-group": "mycontainer",
-                "awslogs-region": "${{env.AWS_REGION}}",
-                "awslogs-stream-prefix": "${{env.TASK_DEFINITION_TAG}}"
-              }
-            }
-          }
-        ]' \
-        --volumes '[{"name": "configVolume", "host": {"sourcePath": "/config_cf.yaml"}}]' \
-        --cpu "300" \
-        --memory "300"
+        aws logs create-log-group --log-group-name CloudFormation || true
+        aws logs create-log-stream --log-group-name CloudFormation --log-stream-name test_${{env.TASK_FAMILY}} || true
 
-# --execution-role-arn arn:aws:iam::${{secrets.AWS_ACCOUNT_ID}}:role/ecsTaskExecutionRole \
-# --task-role-arn arn:aws:iam::${{secrets.AWS_ACCOUNT_ID}}:role/ecsTaskRole \
-
-
-
-
-    - name: Delete ECS Service if Inactive
-      env:
-        ECS_SERVICE: test_nbbo
+    - name: Describe CloudFormation Stack and Send to CloudWatch
       run: |
-        SERVICE_STATUS=$(aws ecs describe-services --cluster $ECS_CLUSTER --services $ECS_SERVICE | jq -r ".services[] | select(.serviceName == \"${ECS_SERVICE}\") | .status")
-        if [ "$SERVICE_STATUS" == "INACTIVE" ]; then
-          aws ecs delete-service --cluster $ECS_CLUSTER --service $ECS_SERVICE --force
-        fi
-#####################to remove this step##################
-    - name: Check if ECS Service Exists
-      env:
-        ECS_SERVICE: test_nbbo
-      id: check_service
+        # Describe the stack
+        STACK_INFO=$(aws cloudformation describe-stacks --stack-name test_${{env.TASK_FAMILY}} --query 'Stacks[0].Outputs' --output text)
+
+        # Send the output to CloudWatch
+        aws logs put-log-events \
+        --log-group-name CloudFormation \
+        --log-stream-name test_${{env.TASK_FAMILY}} \
+        --log-events timestamp=$(date +%s%3N),message="$STACK_INFO"
+
+    - name: Delete CloudFormation Stack
       run: |
-        SERVICE_EXISTS=$(aws ecs describe-services --cluster $ECS_CLUSTER --services $ECS_SERVICE | jq ".services[] | select(.serviceName == \"${ECS_SERVICE}\") | .serviceName")
-        if [ -z "$SERVICE_EXISTS" ]; then
-          echo "SERVICE_DOES_NOT_EXIST=true" >> $GITHUB_ENV
-        else
-          echo "SERVICE_DOES_NOT_EXIST=false" >> $GITHUB_ENV
-        fi
-
-    - name: Create ECS Service if Not Exists
-      env:
-        TASK_DEFINITION_TAG: nbbo
-        ECS_SERVICE: test_nbbo
-      if: env.SERVICE_DOES_NOT_EXIST == 'true'
-      run: |
-        aws ecs create-service \
-          --cluster ${{env.ECS_CLUSTER}} \
-          --service-name ${{env.ECS_SERVICE}} \
-          --task-definition ${{env.TASK_DEFINITION_TAG}} \
-          --desired-count 1 \
-          --launch-type EC2 \
-          --deployment-configuration "deploymentCircuitBreaker={enable=true,rollback=true},maximumPercent=200,minimumHealthyPercent=100" \
-          --scheduling-strategy REPLICA \
-          --placement-strategy "type=spread,field=attribute:ecs.availability-zone" "type=spread,field=instanceId" \
-          --deployment-controller "type=ECS" \
-          --network-configuration "awsvpcConfiguration={subnets=[subnet-ab24e2e3,subnet-a035fc8b,subnet-a1d2e2fa],securityGroups=[sg-6c5b961e],assignPublicIp=DISABLED}" \
-      
-
-    - name: Deploy to ECS
-      env:
-          TASK_DEFINITION: nbbo
-          ECS_SERVICE: test_nbbo
-      run: |
-        aws ecs update-service --cluster $ECS_CLUSTER --service $ECS_SERVICE --task-definition ${{env.TASK_DEFINITION}}
-
-    - name: Check ECS Service Status
-      env:
-          TASK_DEFINITION_TAG: nbbo
-          ECS_SERVICE: test_nbbo
-      run: |
-        aws ecs describe-services --cluster $ECS_CLUSTER --services $ECS_SERVICE
+        aws cloudformation delete-stack --stack-name test_${{env.TASK_FAMILY}}
 
 
-      #don't use if OIDC authentication
-      # env:
-      #   AWS_ACCESS_KEY_ID: ${{ secrets.AMAZON_ACCESS_KEY }}
-      #   AWS_SECRET_ACCESS_KEY: ${{ secrets.AMAZON_SECRET_ACCESS_KEY }}
-      #   AWS_REGION: ${{ secrets.AWS_REGION }}
 
 
 
