--- a/.github/workflows/build_push_aws.yml
+++ b/.github/workflows/build_push_aws.yml
@@ -87,13 +87,6 @@ jobs:
         path: /tmp/.buildx-cache-new
         key: ${{ runner.os }}-buildx-${{ github.sha }}
     
-    # - name: Copy CloudFormation file to EC2
-    #   run: |
-    #     scp -i /path/to/ssh-key -o StrictHostKeyChecking=no /path/to/ecs_cloudformation.yaml ec2-user@ec2-instance-ip:/desired/path/on/ec2
-    #   env:
-    #     SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
-
-
     # Outputs
     outputs:
       ecr_uri: ${{ steps.login-ecr.outputs.registry }}/${{ env.REPO_NAME }} 
@@ -116,6 +109,10 @@ jobs:
 
     steps:
       # ... [steps specific to deployment]
+    - name: Print ECR URI
+      run: echo "ECR URI: ${{ needs.build-and-push.outputs.ecr_uri }}"
+      run: echo "ECR URI: ${{ env.ECR_URI }}"
+
 
     - name: Checkout Repository
       uses: actions/checkout@v2
