--- a/.github/workflows/build_push_aws.yml
+++ b/.github/workflows/build_push_aws.yml
@@ -86,7 +86,7 @@ jobs:
     strategy:
       matrix:         ################################################################TO SET#######################################################################
                       #######################################################################################################################################
-        task_family: ['nbbo', 'binance', bitfinex'] 
+        task_family: ['nbbo', 'binance', 'bitfinex'] 
 
     env:
       REPO_NAME: ${{github.event.repository.name}}
@@ -107,7 +107,7 @@ jobs:
         aws-region: ${{secrets.AWS_REGION}}
         role-to-assume: arn:aws:iam::${{secrets.AWS_ACCOUNT_ID}}:role/github_action
 
-    - name: Deploy CloudFormation Stack
+    - name: Deploy CloudFormation Stack Without AWS Roles 
       run: |
         echo "ECR URI: ${{needs.build-and-push.outputs.ecr_uri}}"
         echo "ECR URI: ${{env.ECR_URI}}"
@@ -117,8 +117,8 @@ jobs:
           --stack-name test-${{env.TASK_FAMILY}} \
           --parameter-overrides \
           ECRRepositoryURI=${{env.ECR_URI}} \
-          ECSExecutionRole=arn:aws:iam::${{secrets.AWS_ACCOUNT_ID}}:role/ecsTaskExecutionRole \
-          ECSTaskRole=arn:aws:iam::${{secrets.AWS_ACCOUNT_ID}}:role/ecsTaskRole \
+          # ECSExecutionRole=arn:aws:iam::${{secrets.AWS_ACCOUNT_ID}}:role/ecsTaskExecutionRole \
+          # ECSTaskRole=arn:aws:iam::${{secrets.AWS_ACCOUNT_ID}}:role/ecsTaskRole \
           ECSTaskFamily=${{env.TASK_FAMILY}} \
           ECSCluster=${{env.ECS_CLUSTER}}
 
