--- a/.github/workflows/build_push_aws.yml
+++ b/.github/workflows/build_push_aws.yml
@@ -91,7 +91,7 @@ jobs:
     env:
       REPO_NAME: ${{github.event.repository.name}}
       AWS_REGION: ${{secrets.AWS_REGION}}
-      ECS_CLUSTER: ultima_ecs
+      ECS_CLUSTER: ultima
       IMAGE_TAG: latest
       TASK_FAMILY: ${{matrix.task_family}}
       ECR_URI: ${{secrets.AWS_ACCOUNT_ID}}.dkr.ecr.ap-northeast-1.amazonaws.com/${{github.event.repository.name}} #${{needs.build-and-push.outputs.ecr_uri}} #is without:latest because is setted in the cloud formation file (check)
