--- a/.github/workflows/build_push_aws.yml
+++ b/.github/workflows/build_push_aws.yml
@@ -20,6 +20,7 @@ jobs:
       AWS_REGION: ${{ secrets.AWS_REGION }}
       IMAGE_TAG: latest
       SSH_PRIVATE_KEY: ${{secrets.AMAZON_PEM}}
+      AWS_EC2_IP: ec2-3-112-191-215
 
     steps:
     - name: Checkout Repository
@@ -80,7 +81,7 @@ jobs:
       run: |
         echo "${{env.SSH_PRIVATE_KEY}}" > ssh_key
         chmod 600 ssh_key
-        scp -i ssh_key -o StrictHostKeyChecking=no ./cloudformation/ecs_cloudformation.yaml ec2-user@your-ec2-instance-ip:~/cloudformation/ecs_cloudformation.yaml
+        scp -i ssh_key -o StrictHostKeyChecking=no ./cloudformation/ecs_cloudformation.yaml ec2-user@${{env.AWS_EC2_IP}}.${{env.AWS_REGION}}.compute.amazonaws.com:~/cloudformation/ecs_cloudformation.yaml
     
     # Outputs
     outputs:
