--- a/feed/pyproject.toml
+++ b/feed/pyproject.toml
@@ -6,9 +6,10 @@ authors = ["gawaboga <samuele.morzenti@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "3.9.16"
 cryptofeed = "^2.3.2"
 redis = "^5.0.1"
+pyyaml = "^6.0.1"
 
 
 [build-system]
