--- a/.github/workflows/build_push_aws.yml
+++ b/.github/workflows/build_push_aws.yml
@@ -95,7 +95,7 @@ jobs:
     strategy:
       matrix:         ################################################################TO SET#######################################################################
                       #######################################################################################################################################
-        task_family: ['binance', 'bitfinex']
+        task_family: ['binance', 'bitfinex', 'binancefutures']
 
     env:
       REPO_NAME: ${{github.event.repository.name}}
